# domain-chemical-substance

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  catalog-backup-0.xml  catalog-v001.xml  chemical-substance-dependencies.ttl  chemical-substance-doc.ttl  chemical-substance-inferred.ttl  chemical-substance.html  chemical-substance.ttl  chemicalsubstance.ttl  config.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.claude/: settings.json
.doctrees/: chemical-substance.doctree  environment.pickle  index.doctree
.doctrees/examples/: example_alkaline_electrochemical_cell.doctree  example_aqueous_electrolyte_KOH.doctree  example_cyclic_voltammetry.doctree  example_eis_nyquist.doctree  example_linked_data_zinc_powder.doctree  example_person_jsonld_nb.doctree  example_zinc_electrode.doctree  example_zinc_powder.doctree
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
_sources/: chemical-substance.rst.txt
context/: context.json
docs/: chemical-substance.rst  index.rst  requirements.txt
examples/: example_alkaline_electrochemical_cell.html  example_aqueous_electrolyte_KOH.html  example_cyclic_voltammetry.html  example_eis_nyquist.html  example_linked_data_zinc_powder.html  example_person_jsonld_nb.html  example_zinc_electrode.html  example_zinc_powder.html
pages/: about.html  contribute.html  examples.html  faq.html  getstarted.html  resources.html  tools.html
sphinx/: index.rst  util.el
tests/: test_bump_version.py
(+53 files in other folders)
