[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-chemical-substance-tooling"
version = "0.0.0"
description = "Tooling dependencies for the domain-chemical-substance ontology (EMMO domain)."
requires-python = ">=3.9"
dependencies = [
  "EMMOntoPy>=0.8.0,<0.9.0",
  "rdflib",
  "owlrl",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
docs = [
  "Sphinx>=7.2,<9",
  "pydata-sphinx-theme==0.16.1",
  "sphinx-design",
  "sphinxcontrib-globalsubs==0.1.1",
  "nbsphinx",
  "sphinx-copybutton",
  # nbsphinx executes notebooks that have no stored outputs
  "ipykernel",
  # used by the JSON-LD example notebooks
  "pyld",
  # bundles a pandoc binary for nbsphinx
  "pypandoc-binary>=1.14",
]
dev = [
  "pytest",
  "jupyter",
  "ipykernel",
]

[project.scripts]
bump-version = "domain_chemical_substance_tooling.bump_version:main"

[tool.ontology]
robot_version = "1.9.6"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_chemical_substance_tooling"]
